whoami/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-svc
  labels:
    app: whoami-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: whoami
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-svc
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
