whoami/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /whoami
            pathType: Prefix
            backend:
              service:
                name: whoami-svc
                port:
                  number: 80
          - path: /vue
            pathType: Prefix
            backend:
              service:
                name: vue-svc
                port:
                  number: 80
          - path: /consumer
            pathType: Prefix
            backend:
              service:
                name: backend-consumer-svc
                port:
                  number: 80
          - path: /producer
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 80
